# wheely-bucket

./: .bumper.toml  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tox.ini
.devcontainer/: Dockerfile
.github/workflows/: lint_test.yml  pypi_release.yml  release.yml
tests/: test_dependency_chunking.py  test_dl.py  test_dl_manager.py  test_package_query.py  test_parse_helpers.py
tests/test_data/: simple_return.json
wheely_bucket/: __init__.py  cli.py  dl_manager.py  package_query.py  parse_lockfile.py  wrap_dl.py
